--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -7,14 +7,17 @@ nav {
 }
 
 .window-scroll {
-  background: var(--color-primary);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  /*background: var(--color-primary);*/
+  background: rgba(255, 255, 255, 0.5); /* رنگ پس‌زمینه با شفافیت */
+  backdrop-filter: blur(8px);
+  box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.1);
   transition: var(--transition);
 }
 
 .window-scroll ul button {
-  border-color: var(--color-white);
+  /*border-color: var(--color-white);*/
   color: var(--color-white);
+
 }
 
 .window-scroll ul button:hover {
@@ -30,7 +33,8 @@ nav {
 }
 
 .nav__container .nav__logo img {
-  height: 3rem;
+  height: 4rem;
+  border-radius: 50%;
 }
 
 nav button {
@@ -50,7 +54,8 @@ nav button {
 }
 
 .nav__menu .nav__link:hover {
-  color: var(--color-fourth);
+  /*color: var(--color-fourth);*/
+opacity: 0.7;
 }
 
 @media screen and (max-width: 1024px) {
@@ -152,6 +157,10 @@ nav button {
 @media screen and (max-width: 400px) {
   .nav__menu {
     width: 11.5rem;
+  }
+
+  .nav__container .nav__logo img {
+    height: 3rem;
   }
 
   .nav__menu li a,
