--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
   --color-site: #444;
   --color-white: #fff;
   --color-black: #000;
-  --color-primary: #5ec576;
-  --color-primary-darker: #37a86a;
+  --color-primary: #0386EE;
+  --color-primary-darker: #0386EE;
   --color-primary-opacity: #5ec5763a;
   --color-secondary: #ffcb03;
   --color-secondary-darker: #ffbb00;
@@ -36,16 +36,18 @@
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  /*width: 10px;*/
+  display: none;
 }
 
-::-webkit-scrollbar-thumb {
-  background: var(--color-primary);
-}
+/*::-webkit-scrollbar-thumb {*/
+/*  background: var(--color-primary);*/
 
-::-webkit-scrollbar-thumb:hover {
-  background: var(--color-primary-darker);
-}
+/*}*/
+
+/*::-webkit-scrollbar-thumb:hover {*/
+/*  background: var(--color-primary-darker);*/
+/*}*/
 
 html {
   scroll-behavior: smooth;
@@ -109,7 +111,6 @@ img {
 .btn {
   display: inline-block;
   background: var(--color-primary);
-  color: var(--color-white);
   padding: 1rem 3rem;
   font-size: 1rem;
   border-radius: 2rem;
@@ -118,12 +119,19 @@ img {
   cursor: pointer;
   transition: var(--transition);
 }
+.btn a {
+  color: var(--color-white);
+}
 
 .btn:hover {
   background: transparent;
   color: var(--color-primary);
   border-color: var(--color-primary);
 }
+.btn:hover a {
+  color: var(--color-site);
+}
+
 
 @media screen and (max-width: 1024px) {
   .container {
