--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   list-style: none;
   box-sizing: border-box;
   text-decoration: none;
+  font-family: "B Yekan";
+
 }
 
 :root {
@@ -65,18 +67,20 @@ body {
   margin: 0 auto;
 }
 
+
+
 section {
   padding: 6rem 0;
 }
 
 section > h2 {
   margin-bottom: 0.8rem;
-  padding-left: 25%;
+  padding-right: 25%;
   color: var(--color-primary);
 }
 
 section > p {
-  padding-left: 25%;
+  padding-right: 25%;
 }
 
 h1,
